--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 <body>
   <div>
+    <h1>CardImg</h1>
+    <p>Please select an image (Recomment side: 1024px*1024px)</p>
     <input type='file' id='fileSelect'>
     <canvas id='result'></canvas>
   </div>
