--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div>
     <h1>CardImg</h1>
-    <p>Please select an image (Recomment side: 1024px*1024px)</p>
+    <p>Please select an image (Recomment size: 1024px*1024px)</p>
     <input type='file' id='fileSelect'>
     <canvas id='result'></canvas>
   </div>
